--- a/fractol.dSYM/Contents/Info.plist
+++ b/fractol.dSYM/Contents/Info.plist
@@ -7,9 +7,9 @@
 		<key>CFBundleIdentifier</key>
 		<string>com.apple.xcode.dsym.fractol</string>
 		<key>CFBundleInfoDictionaryVersion</key>
-		<string>6.0</string>
+		<string>6.0</string>asd
 		<key>CFBundlePackageType</key>
-		<string>dSYM</string>
+		<string>dSYM</string>asd
 		<key>CFBundleSignature</key>
 		<string>????</string>
 		<key>CFBundleShortVersionString</key>
